css/styles.css
a {
    color: blue;
    text-decoration: underline blue;

}

a:hover {
    color: blue;
}

html{scroll-behavior: smooth}

.blink {
    animation: blink 3s infinite;
}

@keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

body {
    background-color: white;
    padding: 20px;
}

img {
    box-shadow: 0px 0px 5px lightgrey;
}

#animated-ocean-gif {
    background-image: url('/assets/ocean-video.gif');
    background-size: cover;
    width: 100%;
    height: 100vh;
    margin-right: 4rem;
    margin-bottom: 5em;
}

.line {
    fill: none;
/*    stroke: #456983; */
    stroke: crimson;
    stroke-width: 3px;
    shape-rendering: crispEdges;
}

#line-plot-user-selection {
    margin-left: 100px;
    margin-bottom: 50px;
}

#opening-text {
    color: #456983;
    font-family: Georgia;
    font-size: 85px;
    margin-top: 180px;
}

#jaws-text-1 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#jaws-text-2 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#jaws-year {
    color: white;
    font-size: 50px;
    font-family: Georgia;
}

#project-title-text-1 {
    color: #456983;
    font-size: 70px;
    font-family: Arial;
    padding-top: 100px;
}

#project-title-text-2 {
    color: #456983;
    font-size: 40px;
    font-family: Arial;
    padding-bottom: 100px;
}

#nj-incident-text-1 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#nj-incident-text-2 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#hook-text-1 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#hook-text-2 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#hook-text-3 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#shark-bites-misconception-text-1 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#shark-bites-misconception-text-2 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#human-fatalities-text-1 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#line-plot-text-1 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#line-plot-text-2 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#line-plot-text-3 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#countries-text-1 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#countries-text-2 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding: 30px;
}

#species-text-1 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding-top: 100px;
    padding: 30px;
}

#species-text-2 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding-top: 100px;
    padding: 30px;
}

#white-shark-text-1 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding-top: 30px;
    padding-left: 30px;
}

#white-shark-text-2 {
    color: white;
    font-size: 30px;
    font-style: italic;
    font-family: Georgia;
    padding-left: 30px;
}

#white-shark-text-3 {
    color: white;
    font-size: 20px;
    font-weight: 600;
    font-family: Georgia;
    padding-top: 20px;
    padding-left: 30px;
}

#white-shark-text-4 {
    color: white;
    font-size: 20px;
    font-family: Georgia;
    padding-left: 30px;
}

#white-shark-text-5 {
    color: white;
    font-size: 20px;
    font-weight: 600;
    font-family: Georgia;
    padding-top: 20px;
    padding-left: 30px;
}

#white-shark-text-6 {
    color: white;
    font-size: 20px;
    font-family: Georgia;
    padding-left: 30px;
}

#white-shark-text-7 {
    color: white;
    font-size: 20px;
    font-weight: 600;
    font-family: Georgia;
    padding-top: 20px;
    padding-left: 30px;
}

#white-shark-text-8 {
    color: white;
    font-size: 20px;
    font-family: Georgia;
    padding-left: 30px;
    padding-bottom: 30px;
}

#tiger-shark-text-1 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding-top: 30px;
    padding-left: 30px;
}

#tiger-shark-text-2 {
    color: white;
    font-size: 30px;
    font-style: italic;
    font-family: Georgia;
    padding-left: 30px;
}

#tiger-shark-text-3 {
    color: white;
    font-size: 20px;
    font-weight: 600;
    font-family: Georgia;
    padding-top: 20px;
    padding-left: 30px;
}

#tiger-shark-text-4 {
    color: white;
    font-size: 20px;
    font-family: Georgia;
    padding-left: 30px;
}

#tiger-shark-text-5 {
    color: white;
    font-size: 20px;
    font-weight: 600;
    font-family: Georgia;
    padding-top: 20px;
    padding-left: 30px;
}

#tiger-shark-text-6 {
    color: white;
    font-size: 20px;
    font-family: Georgia;
    padding-left: 30px;
}

#tiger-shark-text-7 {
    color: white;
    font-size: 20px;
    font-weight: 600;
    font-family: Georgia;
    padding-top: 20px;
    padding-left: 30px;
}

#tiger-shark-text-8 {
    color: white;
    font-size: 20px;
    font-family: Georgia;
    padding-left: 30px;
    padding-bottom: 30px;
}

#bull-shark-text-1 {
    color: white;
    font-size: 50px;
    font-family: Georgia;
    padding-top: 30px;
    padding-left: 30px;
}

#bull-shark-text-2 {
    color: white;
    font-size: 30px;
    font-style: italic;
    font-family: Georgia;
    padding-left: 30px;
}

#bull-shark-text-3 {
    color: white;
    font-size: 20px;
    font-weight: 600;
    font-family: Georgia;
    padding-top: 20px;
    padding-left: 30px;
}

#bull-shark-text-4 {
    color: white;
    font-size: 20px;
    font-family: Georgia;
    padding-left: 30px;
}
/* ... */

